fixed extra vertical scrollbar showing up in some cases

--- a/media/css/base.scss
+++ b/media/css/base.scss
@@ -5,6 +5,7 @@
 .container {
     margin: 0 auto;
     width: 960px;
+    overflow-y: hidden;
 }
 
 html {
